simple color redesign

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         </nav>
         <div class="wrapper">
-            <div class="parallax filter-gradient gray" data-color="gray">
+            <div class="parallax filter-gradient white" data-color="white">
                 <div class="parallax-background">
                     <img class="parallax-background-image" src="assets/img/nandoquintana-wallpaper-2.jpg">
                 </div>
