--- a/index.html
+++ b/index.html
@@ -95,18 +95,8 @@ a strong background in <strong>Python</strong> backend and <strong>Javascript</s
                         <ul class="list-unstyled">
 
                             <li>
-                                <a href="https://nandoquintana.wordpress.com" target="_blank">
-                                    <img src="https://nandoquintana.files.wordpress.com/2018/03/wordpress1.png" alt="nandoquintana en wordpress" />
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://facebook.com/nandoquintana" target="_blank">
-                                    <img src="https://nandoquintana.files.wordpress.com/2017/04/facebook.png" alt="@nandoquintana en facebook" />
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://medium.com/@nandoquintana" target="_blank">
-                                    <img src="https://nandoquintana.files.wordpress.com/2018/03/medium.png" alt="@nandoquintana en medium" />
+                                <a href="https://stackoverflow.com/cv/nandoquintana" target="_blank">
+                                    <img src="https://nandoquintana.files.wordpress.com/2018/08/stackoverflow_22.png" alt="nandoquintana en stackoverflow" />
                                 </a>
                             </li>
                             <li>
@@ -120,8 +110,13 @@ a strong background in <strong>Python</strong> backend and <strong>Javascript</s
                                 </a>
                             </li>
                             <li>
-                                <a href="http://pinterest.com/nandoquintana" target="_blank">
-                                    <img src="https://nandoquintana.files.wordpress.com/2017/04/pinterest.png" alt="@nandoquintana en pinterest" />
+                                <a href="https://www.linkedin.com/in/nandoquintana" target="_blank">
+                                    <img src="https://nandoquintana.files.wordpress.com/2017/04/linkedin.png" alt="@nandoquintana en linkedin" />
+                                </a>
+                            </li>
+                            <li>
+                                <a href="http://facebook.com/nandoquintana" target="_blank">
+                                    <img src="https://nandoquintana.files.wordpress.com/2017/04/facebook.png" alt="@nandoquintana en facebook" />
                                 </a>
                             </li>
                             <li>
@@ -129,9 +124,14 @@ a strong background in <strong>Python</strong> backend and <strong>Javascript</s
                                     <img src="https://nandoquintana.files.wordpress.com/2017/04/instagram.png" alt="@nandoquintana en instagram" />
                                 </a>
                             </li>
-                            <li >
-                                <a href="https://www.linkedin.com/in/nandoquintana" target="_blank">
-                                    <img src="https://nandoquintana.files.wordpress.com/2017/04/linkedin.png" alt="@nandoquintana en linkedin" />
+                            <li>
+                                <a href="http://pinterest.com/nandoquintana" target="_blank">
+                                    <img src="https://nandoquintana.files.wordpress.com/2017/04/pinterest.png" alt="@nandoquintana en pinterest" />
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://medium.com/@nandoquintana" target="_blank">
+                                    <img src="https://nandoquintana.files.wordpress.com/2018/03/medium.png" alt="@nandoquintana en medium" />
                                 </a>
                             </li>
                         </ul>
