--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                     <div class="row">
                         <div class="col-md-5 hidden-xs">
                             <div class="parallax-image">
-                                <a target="_blank" href="http://nandoquintana.com/nando_quintana_resume.pdf" style="margin-top: 30px;">
-                                    <img class="terminal" src="assets/img/terminal.png"/>
+                                <a target="_blank" href="http://nandoquintana.com/nando_quintana_resume.pdf">
+                                    <img class="terminal" src="assets/img/terminal.png" style="margin-top: 30px;"/>
                                 </a>
                             </div>
                         </div>
