download link for mobile

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <div class="col-md-5 hidden-xs">
                             <div class="parallax-image">
                                 <a target="_blank" href="http://nandoquintana.com/nando_quintana_resume.pdf">
-                                    <img class="terminal" src="assets/img/terminal.png" style="margin-top: 30px;"/>
+                                    <img class="terminal" src="assets/img/terminal.png" style="margin-top: 88px;"/>
                                 </a>
                             </div>
                         </div>
@@ -80,6 +80,8 @@
                                 <br>
                                 <p>Hello, I am a <strong>software engineer</strong> with more than 18 years of experience building internet products. I have
 a strong background in <strong>Python</strong> and <strong>Javascript</strong> development working mainly on <strong>data</strong> and <strong>backend</strong> stuff.</p>
+                            <br>
+                            <p><a target="_blank" href="http://nandoquintana.com/nando_quintana_resume.pdf">Download my <strong>resume</strong></a>.</p>
                             </div>
                         </div>
                     </div>
