update parallax img

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <span class="icon-bar bar2"></span>
                     <span class="icon-bar bar3"></span>
                     </button>
-                    <a href="http://www.nandoquintana.com">
+                    <a href="https://www.nandoquintana.com">
                         <div class="logo-container">
                             <div class="logo">
                                 <a id="profile_picture" href="assets/img/nandoquintana_round.png"><img src="assets/img/nandoquintana_round.png" alt="Nando Quintana"/></a>
@@ -67,10 +67,10 @@
                 </div>
                 <div class= "container">
                     <div class="row">
-                        <div class="col-md-5 hidden-xs">
+                        <div class="col-md-5 hidden-xs hidden-sm">
                             <div class="parallax-image">
-                                <a target="_blank" href="http://nandoquintana.com/nando_quintana_resume.pdf">
-                                    <img class="terminal" src="assets/img/terminal.png" style="margin-top: 88px;"/>
+                                <a target="_blank" href="https://nandoquintana.com/nando_quintana_resume.pdf">
+                                    <img class="terminal" src="assets/img/console.png" style="margin-top: 88px;"/>
                                 </a>
                             </div>
                         </div>
@@ -81,7 +81,7 @@
                                 <p>Hello, I am a <strong>software engineer</strong> with more than 18 years of experience building internet products. I have
 a strong background in <strong>Python</strong> and <strong>Javascript</strong> development working mainly on <strong>data</strong> and <strong>backend</strong> stuff.</p>
                             <br>
-                            <p><a target="_blank" href="http://nandoquintana.com/nando_quintana_resume.pdf">Download my <strong>resume</strong></a>.</p>
+                            <p><a target="_blank" href="https://nandoquintana.com/nando_quintana_resume.pdf">Download my <strong>resume</strong></a>.</p>
                             </div>
                         </div>
                     </div>
@@ -143,7 +143,7 @@ a strong background in <strong>Python</strong> and <strong>Javascript</strong> d
                     <nav class="pull-left">
                         <ul>
                             <li>
-                                <a target="_blank" href="http://nandoquintana.com/nando_quintana_resume.pdf">
+                                <a target="_blank" href="https://nandoquintana.com/nando_quintana_resume.pdf">
                                 Curriculum Vitae (en)
                                 </a>
                             </li>
