kaggle instead of facebook

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ a strong background in <strong>Python</strong> and <strong>Javascript</strong> d
                                 </a>
                             </li>
                             <li>
-                                <a href="http://facebook.com/nandoquintana" target="_blank">
-                                    <img src="https://nandoquintana.files.wordpress.com/2017/04/facebook.png" alt="@nandoquintana en facebook" />
+                                <a href="https://www.kaggle.com/nandoquintana" target="_blank">
+                                    <img src="https://nandoquintana.files.wordpress.com/2021/08/kaggle-t.png" alt="@nandoquintana en kaggle" />
                                 </a>
                             </li>
                             <li>
