stackoverflow url update

--- a/index.html
+++ b/index.html
@@ -93,43 +93,43 @@ a strong background in <strong>Python</strong> and <strong>Javascript</strong> d
                         <ul class="list-unstyled">
 
                             <li>
-                                <a href="https://stackoverflow.com/cv/nandoquintana" target="_blank">
-                                    <img src="https://nandoquintana.files.wordpress.com/2018/08/stackoverflow_22.png" alt="nandoquintana en stackoverflow" />
+                                <a href="https://stackoverflow.com/users/933002/nandoquintana" target="_blank">
+                                    <img src="https://nandoquintana.files.wordpress.com/2018/08/stackoverflow_22.png" alt="nandoquintana on stackoverflow" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://github.com/nandoquintana" target="_blank">
-                                    <img src="https://nandoquintana.files.wordpress.com/2018/03/github-11.png" alt="@nandoquintana en github" />
+                                    <img src="https://nandoquintana.files.wordpress.com/2018/03/github-11.png" alt="@nandoquintana on github" />
                                 </a>
                             </li>
                             <li>
                                 <a href="http://twitter.com/nandoquintana" target="_blank">
-                                    <img src="https://nandoquintana.files.wordpress.com/2017/04/twitter.png" alt="@nandoquintana en twitter" />
+                                    <img src="https://nandoquintana.files.wordpress.com/2017/04/twitter.png" alt="@nandoquintana on twitter" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/nandoquintana" target="_blank">
-                                    <img src="https://nandoquintana.files.wordpress.com/2017/04/linkedin.png" alt="@nandoquintana en linkedin" />
+                                    <img src="https://nandoquintana.files.wordpress.com/2017/04/linkedin.png" alt="@nandoquintana on linkedin" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.kaggle.com/nandoquintana" target="_blank">
-                                    <img src="https://nandoquintana.files.wordpress.com/2021/08/kaggle-t.png" alt="@nandoquintana en kaggle" />
+                                    <img src="https://nandoquintana.files.wordpress.com/2021/08/kaggle-t.png" alt="@nandoquintana on kaggle" />
                                 </a>
                             </li>
                             <li>
                                 <a href="http://instagram.com/nandoquintana" target="_blank">
-                                    <img src="https://nandoquintana.files.wordpress.com/2017/04/instagram.png" alt="@nandoquintana en instagram" />
+                                    <img src="https://nandoquintana.files.wordpress.com/2017/04/instagram.png" alt="@nandoquintana on instagram" />
                                 </a>
                             </li>
                             <li>
                                 <a href="http://pinterest.com/nandoquintana" target="_blank">
-                                    <img src="https://nandoquintana.files.wordpress.com/2017/04/pinterest.png" alt="@nandoquintana en pinterest" />
+                                    <img src="https://nandoquintana.files.wordpress.com/2017/04/pinterest.png" alt="@nandoquintana on pinterest" />
                                 </a>
                             </li>
                             <li>
                                 <a href="https://medium.com/@nandoquintana" target="_blank">
-                                    <img src="https://nandoquintana.files.wordpress.com/2018/03/medium.png" alt="@nandoquintana en medium" />
+                                    <img src="https://nandoquintana.files.wordpress.com/2018/03/medium.png" alt="@nandoquintana on medium" />
                                 </a>
                             </li>
                         </ul>
