--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
                             <div class="description">
                                 <h2>Nando Quintana</h2>
                                 <br>
-                                <p>Hello, I am a <strong>software engineer</strong> with more than 20 years of experience building internet products. I have
-a strong background in <strong>Python</strong> and <strong>Javascript</strong> development working mainly on <strong>data</strong> and <strong>backend</strong> stuff.</p>
+                                <p>Hello, I am a <strong>software engineer</strong> with more than 20 years of experience building internet products. I have a strong background in <strong>Python</strong> development, <strong>platform</strong> management and <strong>SQL</strong>, working mainly on <strong>data</strong> stuff.</p>
                             <br>
                             <p><a target="_blank" href="https://nandoquintana.com/nando_quintana_resume.pdf">Download my <strong>resume</strong></a>.</p>
                             </div>
